-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.435 2009-03-05 20:30:59 guru Exp $
-----------------------------------------------------------------------------------------

2009-03-05	pwessel
	* gmtselect.c:		The -Z option can now handle dateTclock strings for used with
				data whose 3rd column contains time.

2009-03-05	jluis
	* ps2raster.c:		Added -Wg option which creates a simpe KML file to load in GE.
	* ps2raster.c:		Recognize -Jx<scale> (e.g. no 'd') as a linear geographic
				projection when -R<region> fits inside a sane ([-180 360][-90 90])
				interval (when -W is used).

2009-03-04	pwessel
	* mgd77/mgd77list.c:	Now can specify -DA and -DB which, in the presence of time = NaN,
				will not output such records [-Da|b will].  Also clarified the
				ranges implied by -D/-S.
	* blockm*.c:		Gave bogus usage about number of input columns when -E is set
				but -E only affects output.  Input is always 3 or 4 cols.

2009-03-04	remko
	* gmt_map.c (GMT_grd_project):	Incorrectly attempted to free array only used when
				antialias is on.
	* gmt_proj.c (GMT_ilamb_sph):	Fixed bug in longitude computation when standard
				parallel is on Southern Hemisphere.

2009-02-27	remko
	* pswiggle.c:		Ctrl->I.value used to change internally. Considered harmful.
	* gmt_proj.c:		Rid ourselves of a few more D2R and R2D. Using degree-based
				trig instead.
	* gmt_map.c:		---"---  z_project.view_{azimuth,elevation} used to change to
				radians at end of GMT_init_threeD. Potential bug.
	* psxyz.c:		In sort_on_distance: speed up by replacing tan(az) by ratio
				of pre-computed sin_az and cos_az.

2009-02-25	remko
	* gmt.h:		Introduced degree-based inverse trig functions: asind, acosd,
				atand, atan2d as well as their "safe" equivalents.
	* coast/segment_connect.c:	Simplified i_great_circle_dist() by calling
				GMT_great_circle_dist().
	* gmt_map.c:		Fixed serious bug in GMT_az_backaz_flatearth: incorrectly