@@ -1,13 +1,15 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.435 2009-03-05 20:30:59 guru Exp $
+	$Id: ChangeLog,v 1.436 2009-03-06 03:49:35 guru Exp $
 -----------------------------------------------------------------------------------------
 
 2009-03-05	pwessel
 	* gmtselect.c:		The -Z option can now handle dateTclock strings for used with
 				data whose 3rd column contains time.
+	* blockmedian.c:	Now returns the quantile(x), quantile(y) location when -T is used.
+				Added -Eb to get box-and-whisker output (0. 25, 50, 75, and 100% quantiles).
 
 2009-03-05	jluis
-	* ps2raster.c:		Added -Wg option which creates a simpe KML file to load in GE.
+	* ps2raster.c:		Added -Wg to create a simple KML file for Google Earth.
 	* ps2raster.c:		Recognize -Jx<scale> (e.g. no 'd') as a linear geographic
 				projection when -R<region> fits inside a sane ([-180 360][-90 90])
 				interval (when -W is used).
